@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em3EventAction.cc,v 1.6 2001-02-20 13:28:43 maire Exp $
+// $Id: Em3EventAction.cc,v 1.7 2001-02-21 11:17:03 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -34,6 +34,10 @@
 #include "G4ios.hh"
 #include "G4UnitsTable.hh"
 #include "Randomize.hh"
+
+#ifndef G4NOHIST
+ #include "CLHEP/Hist/HBookFile.h"
+#endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -87,7 +91,11 @@ void Em3EventAction::EndOfEventAction(const G4Event* evt)
   G4double totEAbs, totLAbs;
   char str1[6], str2[6];
   strcpy(str1,"EAbs");strcpy(str2,"LAbs");
-     
+
+#ifndef G4NOHIST  
+  HepTuple* ntuple=Em3Run->GetnTuple();
+#endif
+       
   if (HCE) CHC = (Em3CalorHitsCollection*)(HCE->GetHC(calorimeterCollID));
 
   if (CHC)
@@ -100,8 +108,19 @@ void Em3EventAction::EndOfEventAction(const G4Event* evt)
 	     totEAbs += (*CHC)[j]->GetEdepAbs(k); 
              totLAbs += (*CHC)[j]->GetTrakAbs(k);     
             }
-         Em3Run->fillPerEvent(k,totEAbs,totLAbs);	 
+         Em3Run->fillPerEvent(k,totEAbs,totLAbs);
+	 
+#ifndef G4NOHIST        
+         //fill ntuple
+         //	 
+	 str1[4] = str2[4] = (char)((int)('0') + k);
+         ntuple->column(str1,totEAbs);
+         ntuple->column(str2,totLAbs);
+#endif  	 	 
        }
+#ifndef G4NOHIST       
+      ntuple->dumpData();
+#endif         
     }
     
   if (G4VVisManager::GetConcreteInstance())
