@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em3RunAction.cc,v 1.6 2001-02-20 13:28:43 maire Exp $
+// $Id: Em3RunAction.cc,v 1.7 2001-02-21 11:17:03 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -26,6 +26,10 @@
 #include "Randomize.hh"
 #include "g4std/iomanip"
 
+#ifndef G4NOHIST
+ #include "CLHEP/Hist/HBookFile.h"
+#endif
+
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 Em3RunAction::Em3RunAction(Em3DetectorConstruction* det)
@@ -41,12 +45,26 @@ Em3RunAction::Em3RunAction(Em3DetectorConstruction* det)
 Em3RunAction::~Em3RunAction()
 {
   delete runMessenger;
+  
+#ifndef G4NOHIST  
+ // Delete HBOOK stuff
+  delete ntuple;
+  delete hbookManager;
+#endif  
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 void Em3RunAction::bookHisto()
-{}
+{
+#ifndef G4NOHIST
+  // init hbook
+  hbookManager = new HBookFile("TestEm3.ntupl", 68);
+
+  // book a ntuple
+  ntuple = hbookManager->ntuple("sum per event");
+#endif   
+}
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
@@ -118,6 +136,11 @@ void Em3RunAction::EndOfRunAction(const G4Run* aRun)
   G4cout << G4endl;  
   G4cout.setf(oldform,G4std::ios::floatfield);
   G4cout.precision(oldprec);
+  
+#ifndef G4NOHIST  
+  // Write histogram file 
+  hbookManager->write();
+#endif  
   
   // save Rndm status
   if (saveRndm > 0)
